Fixed mobile overflow on PRF

--- a/dcc-widgets/dccw-stylesheet.css
+++ b/dcc-widgets/dccw-stylesheet.css
@@ -28,7 +28,6 @@ dcc-householdprf h3 {
 .dccw-prf-person-status {
   font-style: italic;
   font-size: 0.95em;
-  float: left;
 }
 
 #downloadPRF {
